[gd_scene load_steps=2 format=2]

[ext_resource path="res://src/Helpers/Camera/CustomDelimiter2D.gd" type="Script" id=1]

[node name="CustomDelimiter2D" type="Position2D"]
script = ExtResource( 1 )

[node name="BottomRight" type="Position2D" parent="."]
position = Vector2( 480, 350 )
